# UCSG

./: CMakeLists.txt  Design.md  README.md  build.bat  currentplan.md  docs.txt
docs/: Folder Structure.md  areas.md
include/: World.hpp  actor.hpp  area.hpp  asset_manager.hpp  collision.h  collision.hpp  debugger.hpp  game.hpp  gamestate.hpp  input.h  mesh.hpp  renderer.hpp  resource_manager.hpp  shader.hpp  sprite.hpp  tile_manager.hpp  tilemap.h
include/glad/: glad.h
resources/areaData/Hallway/: data.json
resources/areaData/TestMap/: TestMap.json  Tileset.json  data.json
resources/areas/: Hallway.json
resources/shaders/area/: fragment.frag
resources/shaders/base/: fragment.frag
resources/tilesets/ShipInterior/: data.json
src/: actor.cpp  area.cpp  asset_manager.cpp  collision.cpp  debugger.cpp  game.cpp  glad.c  input.cpp  main.cpp  renderer.cpp  resource_manager.cpp  sprite.cpp  tile_manager.cpp
